--- a/yeb-server/src/main/resources/config/application.yml
+++ b/yeb-server/src/main/resources/config/application.yml
@@ -42,3 +42,15 @@ logging:
   level:
     comm.xxxx.server.mapper: debug
 
+
+jwt:
+  # JWT存储的请求头
+  tokenHeader: Authorization
+  # JWT 加解密使用的密钥
+  secret: yeb-secret
+  # JWT的超期限时间(60*60*24) 24小时失效 单位s
+  expiration: 604800
+  # JWT 负载中拿到开头
+  tokenHead: Bearer
+
+
