--- a/yeb-server/src/main/resources/config/application.yml
+++ b/yeb-server/src/main/resources/config/application.yml
@@ -26,6 +26,9 @@ spring:
       connection-timeout: 30000
       # 测试连接是否可用的查询语句
       connection-test-query: SELECT 1
+  # 允许循环依赖 springboot2.6.0以后默认禁止循环依赖
+#  main:
+#    allow-circular-references: true
 
 # Mybatis-plus配置
 mybatis-plus:
