--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -31,10 +31,15 @@
             <optional>true</optional>
         </dependency>
         <!-- mariadb 依赖 -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <scope>runtime</scope>
+        </dependency>-->
+        <!-- mysql 依赖 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <!-- mybatis-plus 依赖 -->
         <dependency>
@@ -64,6 +69,12 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
+        </dependency>
+        <!-- google kaptch 依赖 -->
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>0.0.9</version>
         </dependency>
     </dependencies>
 </project>
